--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-</head>
-<body>
+<%- include('layouts/header') %>
+<%- include('layouts/nav') %>
     <h1>About page</h1>
-</body>
-</html>
+<%- include('layouts/footer') %>
