--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-    <h1>Welcome to Home!, <%= name %> </h1>
-    <ul>
-        <% hobby.forEach(e=> { %>
-            <li> 
-                 <%= e.name %>
-                 <%= e.tool %>   
-            </li>
-        <% }) %> 
-    </ul>    
-</body>
-</html>
+<%- include('layouts/header') %>
+<%- include('layouts/nav') %>
+<h1>Welcome to Home!, <%= name %> </h1>
+<ul>
+    <% hobby.forEach(e=> { %>
+        <li> 
+             <%= e.name %>
+             <%= e.tool %>   
+        </li>
+    <% }) %> 
+</ul>  
+<%- include('layouts/footer') %>  
