--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,1 +1,8 @@
-<h1>About page</h1>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>About page</h1>
+            <img src="./img/test.png" alt="">
+        </div>
+    </div>
+</div>
