--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,8 +1,28 @@
-<div class="container">
+<div class="container mt-5">
     <div class="row">
         <div class="col">
-            <h1>About page</h1>
-            <img src="./img/test.png" alt="">
+            <table class="table table-dark table-striped">
+                <thead>
+                    <tr>
+                        <td>No</td>
+                        <td>Phone Number</td>
+                        <td>Name</td>
+                        <td>Email</td>
+                        <td></td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>0812345678</td>
+                        <td>Reymunda</td>
+                        <td>reymunda@gmail.com</td>
+                        <td>
+                            <button>Detail</button>
+                        </td>
+                    </tr>
+                </tbody>
+              </table>
         </div>
     </div>
 </div>
