--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,1 +1,59 @@
-<h1>Contact page</h1>
+<div class="container mt-5">
+    <div class="row">
+        <h2 class="mb-3">Contact List <span class=" ms-2 badge bg-success">1</span></h2>
+    </div>
+    <div class="row">
+        <div class="col">
+            <table class="table table-dark table-striped">
+                <thead>
+                    <tr>
+                        <td>No</td>
+                        <td>Phone Number</td>
+                        <td>Name</td>
+                        <td></td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>0812345678</td>
+                        <td>Reymunda</td>
+                        <td class="text-center">
+                            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#detailModal">Detail</button>
+                        </td>
+                    </tr>
+                </tbody>
+              </table>
+        </div>
+    </div>
+</div>
+<!-- Button trigger modal -->  
+  <!-- Modal -->
+  <div class="modal fade" id="detailModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Detail</h5>
+        </div>
+        <div class="modal-body">
+          <table class="table table-striped">
+            <tr>
+                <th>Phone Number: </th>
+                <td>0812345678</td>
+            </tr>
+            <tr>
+                <th>Name: </th>
+                <td>Reymunda</td>
+            </tr>
+            <tr>
+                <th>Email: </th>
+                <td>reymunda@gmail.com</td>
+            </tr>
+          </table>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
