--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,16 @@
+<% let contactDetail = {name: '',phone:'',email:''}%>
 <div class="container mt-5">
     <div class="row">
-        <h2 class="mb-3">Contact List <span class=" ms-2 badge bg-success"><%= contacts.length %> </span></h2>
+        <h2 class="mb-4">Contact List <span class=" ms-2 badge bg-success"><%= contacts.length %> </span></h2>
+    </div>
+    <div class="row mb-2">
+        <div class="col">
+            <a href="/contact/add">
+                <button class="btn btn-success"><svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                  </svg> Add contact</button>
+            </a>
+        </div>
     </div>
     <div class="row">
         <div class="col">
@@ -20,8 +30,8 @@
                                 <td><%= i+1 %> </td>
                                 <td><%= e.name %> </td>
                                 <td><%= e.phone %> </td>
-                                <td class="text-center">
-                                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#detailModal">Detail</button>
+                                <td class="text-center"> 
+                                    <button type="button" class="btn btn-success" data-bs-toggle="modal" name="<%=e.name%>" data-bs-target="#detailModal">Detail</button>
                                 </td>
                             </tr>
                         <% }) %>  
@@ -39,9 +49,8 @@
         </div>
     </div>
 </div>
-<!-- Button trigger modal -->  
-  <!-- Modal -->
-  <div class="modal fade" id="detailModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- Modal -->
+<div class="modal fade" id="detailModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -51,15 +60,15 @@
           <table class="table table-striped">
             <tr>
                 <th>Phone Number: </th>
-                <td>0812345678</td>
+                <td><%= contactDetail.phone %> </td>
             </tr>
             <tr>
                 <th>Name: </th>
-                <td>Reymunda</td>
+                <td><%= contactDetail.name %> </td>
             </tr>
             <tr>
                 <th>Email: </th>
-                <td>reymunda@gmail.com</td>
+                <td><%= contactDetail.email%> </td>
             </tr>
           </table>
         </div>
