implement success form validator

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,6 +2,11 @@
 <div class="container mt-5">
     <div class="row">
         <h2 class="mb-4">Contact List <span class=" ms-2 badge bg-success"><%= contacts.length %> </span></h2>
+        <% if(msg.length !== 0){ %>
+            <div class="alert alert-success mb-3" role="alert">
+                <%= msg %> 
+            </div>
+        <% } %>  
     </div>
     <div class="row mb-2">
         <div class="col">
@@ -10,6 +15,7 @@
                     <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
                   </svg> Add contact</button>
             </a>
+            
         </div>
     </div>
     <div class="row">
