add remove toggle

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -38,6 +38,7 @@
                                 <td><%= e.phone %> </td>
                                 <td class="text-center"> 
                                     <button type="button" class="btn btn-success" data-bs-toggle="modal" name="<%=e.name%>" data-bs-target="#detailModal">Detail</button>
+                                    <button type="button" class="btn btn-danger">Remove</button>
                                 </td>
                             </tr>
                         <% }) %>  
