add search page

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -10,21 +10,21 @@
                 </div>
             <% } %> 
         <h2 class="text-center mb-4">Enter other contact data</h2>
-        <div class="col-md-6 mx-auto" style="padding: 20px;border:1px solid #dedede">
+        <div class="col-md-6 mx-auto" style="background-color: #2C3034;padding: 20px;">
             <form method="post" action="/contact/add">
                 <div class="form-group mb-3">
-                  <label for="exampleInputText1">Name</label>
-                  <input type="text" name="name" class="form-control" placeholder="Enter your name" required>
+                  <label for="exampleInputText1" style="color: #1da164;">Name</label>
+                  <input type="text" name="name" class="form-control" placeholder="Enter your name" required style="background-color: #212529;border: none;color: #fff;">
                 </div>
                 <div class="form-group mb-3">
-                  <label for="exampleInputPhone1">Phone Number</label>
-                  <input type="tel" name="phone" class="form-control" placeholder="Enter your phone number" required>
+                  <label for="exampleInputPhone1" style="color: #1da164;">Phone Number</label>
+                  <input type="tel" name="phone" class="form-control" placeholder="Enter your phone number" required style="background-color: #212529;border: none;color: #fff;">
                 </div>
                 <div class="form-group mb-3">
-                    <label for="exampleInputPassword1">Email (optional)</label>
-                    <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your name" required>
+                    <label for="exampleInputPassword1" style="color: #1da164;">Email (optional)</label>
+                    <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your name" required style="background-color: #212529; border: none;color: #fff;">
                 </div>
-                <button type="submit" class="btn btn-primary">Add new contact</button>
+                <button type="submit" class="btn btn-success">Add new contact</button>
               </form>
         </div>
     </div>
