--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -10,24 +10,24 @@
                 </div>
             <% } %> 
         <h2 class="text-center mb-4">Enter other contact data</h2>
-        <div class="col-md-6 mx-auto" style="padding: 20px;border:1px solid #dedede">
+        <div class="col-md-6 mx-auto" style="background-color: #2C3034;padding: 20px;">
             <form method="post" action="/contact/edit">
                 <div class="form-group mb-3">
                     <input type="hidden" name="oldPhone" value= "<%= contact.phone %>">
                 </div>
                 <div class="form-group mb-3">
-                  <label for="exampleInputText1">Name</label>
-                  <input type="text" name="name" class="form-control" value ="<%= contact.name %>">
+                  <label for="exampleInputText1" style="color: #1da164;">Name</label>
+                  <input type="text" name="name" class="form-control" style="background-color: #212529;border: none;color: #fff;" value ="<%= contact.name %>">
                 </div>
                 <div class="form-group mb-3">
-                  <label for="exampleInputPhone1">Phone Number</label>
-                  <input type="tel" name="phone" class="form-control" value ="<%= contact.phone %>">
+                  <label for="exampleInputPhone1" style="color: #1da164;">Phone Number</label>
+                  <input type="tel" name="phone" class="form-control" style="background-color: #212529;border: none;color: #fff;" value ="<%= contact.phone %>">
                 </div>
                 <div class="form-group mb-3">
-                    <label for="exampleInputPassword1">Email (optional)</label>
-                    <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value ="<%= contact.email %>">
+                    <label for="exampleInputPassword1" style="color: #1da164;">Email (optional)</label>
+                    <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" style="background-color: #212529;border: none;color: #fff;" value ="<%= contact.email %>">
                 </div>
-                <button type="submit" class="btn btn-primary">Edit contact</button>
+                <button type="submit" class="btn btn-success">Edit contact</button>
               </form>
         </div>
     </div>
