--- a/views/layouts/nav.ejs
+++ b/views/layouts/nav.ejs
@@ -18,7 +18,7 @@
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+            <a href="/contact/search" class="btn btn-outline-success">Search</a>
         </form>
       </div>
     </div>
